Swith to play-scala template

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="`t<6Vmj8J]>v`vcDjb2mYN@[Y1UkV0/6/TqytNwLF5I_dRx[@d`sY8Lpm6xAkJ3T"
+application.secret="0Hs5GF[tqwbBp_bDqaF^HZp0A@MHPBV;msujTrMiDAK=OON5_NQR<L3]T5rsaE5]"
 
 # The application languages
 # ~~~~~
