--- a/project/build.properties
+++ b/project/build.properties
@@ -1,4 +1,4 @@
 #Activator-generated Properties
-#Thu May 22 01:07:26 EDT 2014
-template.uuid=a07426b4-90f9-4cbc-8211-72f7a8dd9924
-sbt.version=0.13.0
+#Thu May 22 11:41:17 EDT 2014
+template.uuid=932f7359-db76-4063-8e4b-5d098baf2f15
+sbt.version=0.13.5-M2
