--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,4 @@ dist
 /.project
 /RUNNING_PID
 /.settings
-/project/*-shim.sbt
-/activator-sbt-atmos-akka-shim.sbt
-.cache
+activator-sbt-*-shim.sbt
